--- a/RPG/index.html
+++ b/RPG/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPG - Dragon Repeller</title>
+    <title>RPG - Alexandre's Adventure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
             <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
             <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
         </div>
-        <div id="text">Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. 
+        <div id="text">Welcome to Alexandre's Adventure. You must defeat the dragon that is preventing people from leaving the town. 
                         You are in the Town Square. Where do you want to go? Use the buttons above.</div>
     </div>
     <script src="script.js"></script>
