--- a/Palindrome Checker/index.html
+++ b/Palindrome Checker/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="script.js"></script>
-    <input type="text" name="input" id="text-input" value="Digite aqui"/>
+    <input type="text" name="input" id="text-input"/>
     <button id="check-btn">Check</button>
-    <div id="result">Resultado: </div>
+    <div>Result: 
+    <span id="result"></span>    
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
