--- a/Palindrome Checker/index.html
+++ b/Palindrome Checker/index.html
@@ -7,11 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <input type="text" name="input" id="text-input"/>
-    <button id="check-btn">Check</button>
-    <div>Result: 
-    <span id="result"></span>    
-    </div>
+    <main class="container">
+        <h1>
+            Palindrome Checker
+        </h1>
+        <div class="main-div">
+            <label for="text-input">
+                Enter text to check if it's a palindrome!
+            </label>
+            <input type="text" name="input" id="text-input" class="text-input"/>
+            <button id="check-btn">Check</button>
+            <div id="result">  </div>
+        </div>
+        <div class="palindrome-definition-div">
+            <p>A <b>palindrome</b> is a word, number, phrase, or other sequence of characters which 
+                reads the same backward as forward.
+            </p>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
